<?xml version="1.0"?>
<package>
  <name>rocon_unreliable_experiments</name>
  <version>0.7.10</version>
  <description>
    Some experiments testing roscpp unreliable transports.
  </description>
  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/rocon_unreliable_experiments</url>
  <url type="repository">https://github.com/robotics-in-concert/rocon_multimaster</url>
  <url type="bugtracker">https://github.com/robotics-in-concert/rocon_multimaster/issues</url>
  <author email="d.stonier@gmail.com">Daniel Stonier</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  
  <export>
    <!-- This section contains any information that other tools require-->
    <!-- <architecture_independent/> -->
    <!-- <metapackage/> -->
  </export>
</package>